@@ -1,2 +1,3 @@
+EBUILD calculate-meta-11.6-r1.ebuild 1318 RMD160 166ba85f0d1d00b09b231065cae0e32fcb2990ef SHA1 90f01f13936d07c3a60f10fa35f668e69ecbf74d SHA256 7e6df23469303f119442c50eb8678c7cc37c00d7adbd6f1b8a0e5bb9ed6018fc
 EBUILD calculate-meta-11.6.ebuild 711 RMD160 a9ee5d3e306afb0c5c3176fffab32b9f79a6c153 SHA1 3f1e232d2eeb098deee1a84e9007a4c26dc1041b SHA256 6a48ab2e12fb21a6b89cb3d336bdd764906713b97efa1a26fa3705da7b5d3378
-MISC ChangeLog 1074 RMD160 a20aed786ea716a6479e3e7154d515e79f92a076 SHA1 64c5eeb2f66b8ab7468828a989f92c89958f9c08 SHA256 1ea2e88af98c6c8986c2a7fa700858083214e3d7ab666933b7e467d50f6b0b13
+MISC ChangeLog 1253 RMD160 df7e5a9ce57941d3af7367e6124a059964c9a880 SHA1 21c84d5034727f93a51bd670a6fb99fd8b3ae588 SHA256 baf5b66934b312d9403f6f25b527f234a3306022856adf04af8713b9369d84fe
