@@ -2,6 +2,12 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*calculate-meta-11.6-r1 (05 Jul 2011)
+
+  05 Jul 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
+  +calculate-meta-11.6-r1.ebuild:
+  Fix updating the calculate utilities.
+
 *calculate-meta-11.6 (18 May 2011)
 
   18 May 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
